tests/baselines/reference/importHelpersWithImportOrExportDefaultNoTslib.1(esmoduleinterop=true,module=commonjs).errors.txt
b.ts(1,10): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


==== a.ts (0 errors) ====
    export default class { }
    
==== b.ts (1 errors) ====
    export { default } from "./a";
             ~~~~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
    